parser.output
Grammar

    0 $accept: xkbkeymap $end

    1 xkbkeymap: "xkb_keymap" '{' keymap '}' ';'
    2          | "xkb_keymap" STR '{' keymap '}' ';'

    3 $@1: /* empty */

    4 xkbkeymap: '{' keymap '}' $@1 ';'

    5 keymap: /* empty */
    6       | keymap types
    7       | keymap keycodes
    8       | keymap compat
    9       | keymap symbols
   10       | keymap geometry

   11 include: "include"
   12        | "augment"
   13        | "replace"
   14        | "override"

   15 flags: /* empty */
   16      | flags FLAGS

   17 keycodes: flags "xkb_keycodes" '{' keycodesect '}' ';'
   18         | flags "xkb_keycodes" STR '{' keycodesect '}' ';'

   19 keycodesinclude: '{' keycodesect '}'
   20                | keycodesinclude '{' keycodesect '}'

   21 keycodesect: /* empty */
   22            | "minimum" '=' NUM ';' keycodesect
   23            | "maximum" '=' NUM ';' keycodesect

   24 $@2: /* empty */

   25 keycodesect: KEYCODE '=' NUM ';' $@2 keycodesect

   26 $@3: /* empty */

   27 keycodesect: "replace" KEYCODE '=' NUM ';' $@3 keycodesect
   28            | "indicator" NUM '=' STR ';' keycodesect
   29            | "virtual" "indicator" NUM '=' STR ';' keycodesect

   30 $@4: /* empty */

   31 keycodesect: "alias" KEYCODE '=' KEYCODE ';' $@4 keycodesect

   32 $@5: /* empty */

   33 keycodesect: include STR $@5 keycodesinclude keycodesect

   34 types: flags "xkb_types" '{' typessect '}' ';'
   35      | flags "xkb_types" STR '{' typessect '}' ';'

   36 vmodslist: IDENTIFIER
   37          | vmodslist ',' IDENTIFIER

   38 vmods_def: "virtualmods" vmodslist ';'

   39 vmod: IDENTIFIER

   40 rmod: "shift"
   41     | "lock"
   42     | "control"
   43     | "mod1"
   44     | "mod2"
   45     | "mod3"
   46     | "mod4"
   47     | "mod5"

   48 mods: mods '+' rmod
   49     | mods '+' vmod

   50 @6: /* empty */

   51 mods: @6 rmod

   52 @7: /* empty */

   53 mods: @7 vmod
   54     | "all"
   55     | "none"

   56 level: LEVEL
   57      | "any"
   58      | NUM

   59 type: /* empty */
   60     | type "mods" '=' mods ';'
   61     | type "map" '[' mods ']' '=' level ';'
   62     | type "level_name" '[' level ']' '=' STR ';'
   63     | type "preserve" '[' mods ']' '=' mods ';'

   64 typesinclude: '{' typessect '}'
   65             | typesinclude '{' typessect '}'

   66 typessect: /* empty */
   67          | typessect vmods_def

   68 $@8: /* empty */

   69 typessect: typessect "type" STR $@8 '{' type '}' ';'

   70 $@9: /* empty */

   71 typessect: typessect include STR $@9 typesinclude

   72 compat: flags "xkb_compatibility" '{' compatsect '}' ';'
   73       | flags "xkb_compatibility" STR '{' compatsect '}' ';'

   74 symbol: IDENTIFIER
   75       | "any"
   76       | error

   77 whichstate: "whichstate"
   78           | "none"
   79           | "any"

   80 groups: groups '+' group
   81       | groups '-' group
   82       | group
   83       | "all"

   84 indicators: /* empty */
   85           | indicators indicator

   86 indicator: "mods" '=' mods ';'
   87          | "groups" '=' groups ';'
   88          | "controls" '=' ctrls ';'
   89          | "whichmodstate" '=' whichstate ';'
   90          | "whichgroupstate" '=' whichstate ';'
   91          | allowexplicit ';'
   92          | driveskbd ';'
   93          | "index" '=' NUM ';'

   94 allowexplicit: '~' "allowexplicit"
   95              | '!' "allowexplicit"
   96              | "allowexplicit"
   97              | "allowexplicit" '=' BOOLEAN

   98 driveskbd: '~' "driveskbd"
   99          | '!' "driveskbd"
  100          | "driveskbd"
  101          | "driveskbd" '=' BOOLEAN

  102 interprets: /* empty */
  103           | interprets interpret

  104 interpret: "usemodmap" '=' level ';'
  105          | repeat ';'
  106          | locking ';'
  107          | "virtualmod" '=' vmod ';'
  108          | "action" '=' action ';'

  109 compatinclude: '{' compatsect '}'
  110              | compatinclude '{' compatsect '}'

  111 compatsect: /* empty */
  112           | compatsect vmods_def

  113 $@10: /* empty */

  114 compatsect: compatsect "interpret" '.' $@10 interpret

  115 $@11: /* empty */

  116 compatsect: compatsect "interpret" symbol $@11 '{' interprets '}' ';'

  117 $@12: /* empty */

  118 compatsect: compatsect "interpret" symbol '+' rmod $@12 '{' interprets '}' ';'

  119 $@13: /* empty */

  120 compatsect: compatsect "interpret" symbol '+' "any" $@13 '{' interprets '}' ';'

  121 $@14: /* empty */

  122 compatsect: compatsect "interpret" symbol '+' INTERPMATCH '(' mods ')' $@14 '{' interprets '}' ';'
  123           | compatsect "group" NUM '=' mods ';'
  124           | compatsect "indicator" STR '{' indicators '}' ';'

  125 $@15: /* empty */

  126 compatsect: compatsect include STR $@15 compatinclude
  127           | compatsect actiondef
  128           | compatsect "indicator" '.' indicator

  129 clearlocks: '~' "clearlocks"
  130           | '!' "clearlocks"
  131           | "clearlocks"
  132           | "clearlocks" '=' BOOLEAN

  133 latchtolock: '~' "latchtolock"
  134            | '!' "latchtolock"
  135            | "latchtolock"
  136            | "latchtolock" '=' BOOLEAN

  137 usemodmap: '~' "usemodmap"
  138          | '!' "usemodmap"
  139          | "usemodmap"
  140          | "usemodmap" '=' BOOLEAN

  141 locking: '~' "locking"
  142        | '!' "locking"
  143        | "locking"
  144        | "locking" '=' BOOLEAN

  145 repeat: '~' "repeat"
  146       | '!' "repeat"
  147       | "repeat"
  148       | "repeat" '=' BOOLEAN

  149 groupswrap: '~' "groupswrap"
  150           | '!' "groupswrap"
  151           | "groupswrap"
  152           | "groupswrap" '=' BOOLEAN

  153 groupsclamp: '~' "groupsclamp"
  154            | '!' "groupsclamp"
  155            | "groupsclamp"
  156            | "groupsclamp" '=' BOOLEAN

  157 noaccel: '~' "accel"
  158        | '!' "accel"
  159        | "accel"
  160        | "accel" '=' BOOLEAN

  161 sameserver: '~' "sameserver"
  162           | '!' "sameserver"
  163           | "sameserver"
  164           | "sameserver" '=' BOOLEAN

  165 setmodsparams: /* empty */
  166              | setmodsparam
  167              | setmodsparams ',' setmodsparam

  168 setmodsparam: "mods" '=' mods
  169             | "mods" '=' "usemodmap"
  170             | clearlocks
  171             | usemodmap
  172             | latchtolock

  173 setgroupparams: /* empty */
  174               | setgroupparam
  175               | setgroupparams ',' setgroupparam

  176 setgroupparam: "group" '=' NUM
  177              | "group" '=' '+' NUM
  178              | "group" '=' '-' NUM
  179              | clearlocks
  180              | latchtolock

  181 moveptrparams: /* empty */
  182              | moveptrparam
  183              | moveptrparams ',' moveptrparam

  184 moveptrparam: IDENTIFIER '=' NUM
  185             | IDENTIFIER '=' '+' NUM
  186             | IDENTIFIER '=' '-' NUM
  187             | noaccel

  188 button: NUM
  189       | BUTTONNUM
  190       | "default"

  191 affectbtnlock: "lock"
  192              | "unlock"
  193              | "both"
  194              | "neither"

  195 ptrbtnparams: /* empty */
  196             | ptrbtnparam
  197             | ptrbtnparams ',' ptrbtnparam

  198 ptrbtnparam: "button" '=' button
  199            | "count" '=' NUM
  200            | "affect" '=' affectbtnlock

  201 affectbtns: "defaultbutton"
  202           | "button"
  203           | "all"

  204 ptrdfltparams: /* empty */
  205              | ptrdfltparam
  206              | ptrdfltparams ',' ptrdfltparam

  207 ptrdfltparam: "button" '=' button
  208             | "button" '=' '+' button
  209             | "button" '=' '-' button
  210             | "affect" '=' affectbtns

  211 ctrls: ctrls '+' CONTROLFLAG
  212      | CONTROLFLAG
  213      | "overlay"

  214 ctrlflags: ctrls
  215          | "all"
  216          | "none"

  217 ctrlparams: "controls" '=' ctrlflags

  218 isoaffect: "mods"
  219          | "groups"
  220          | "controls"
  221          | "pointers"
  222          | "all"
  223          | "none"

  224 isolockparams: /* empty */
  225              | isolockparam
  226              | isolockparams ',' isolockparam

  227 isolockparam: "mods" '=' mods
  228             | "mods" '=' "usemodmap"
  229             | "group" '=' group
  230             | "controls" '=' ctrlflags
  231             | "affect" '=' isoaffect

  232 switchscrnparams: switchscrnparam
  233                 | switchscrnparams ',' switchscrnparam

  234 switchscrnparam: "screen" '=' NUM
  235                | "screen" '+' '=' NUM
  236                | "screen" '-' '=' NUM
  237                | sameserver

  238 consscrollparams: consscrollparam
  239                 | consscrollparams ',' consscrollparam

  240 consscrollparam: "screen" '+' '=' "float"
  241                | "screen" '-' '=' "float"
  242                | "line" '=' NUM
  243                | "line" '+' '=' NUM
  244                | "line" '-' '=' NUM
  245                | "percent" '=' NUM

  246 privateparams: /* empty */
  247              | privateparam
  248              | privateparams ',' privateparam

  249 privateparam: "type" '=' HEX
  250             | "data" '=' STR

  251 $@16: /* empty */

  252 action: "setmods" $@16 '(' setmodsparams ')'

  253 $@17: /* empty */

  254 action: "latchmods" $@17 '(' setmodsparams ')'

  255 $@18: /* empty */

  256 action: "lockmods" $@18 '(' setmodsparams ')'

  257 $@19: /* empty */

  258 action: "setgroup" $@19 '(' setgroupparams ')'

  259 $@20: /* empty */

  260 action: "latchgroup" $@20 '(' setgroupparams ')'

  261 $@21: /* empty */

  262 action: "lockgroup" $@21 '(' setgroupparams ')'

  263 $@22: /* empty */

  264 action: "moveptr" $@22 '(' moveptrparams ')'

  265 $@23: /* empty */

  266 action: "ptrbtn" $@23 '(' ptrbtnparams ')'

  267 $@24: /* empty */

  268 action: "lockptrbtn" $@24 '(' ptrbtnparams ')'

  269 $@25: /* empty */

  270 action: "setptrdflt" $@25 '(' ptrdfltparams ')'

  271 $@26: /* empty */

  272 action: "setcontrols" $@26 '(' ctrlparams ')'

  273 $@27: /* empty */

  274 action: "lockcontrols" $@27 '(' ctrlparams ')'
  275       | "terminate" '(' ')'

  276 $@28: /* empty */

  277 action: "switchscreen" $@28 '(' switchscrnparams ')'

  278 $@29: /* empty */

  279 action: "consscroll" $@29 '(' consscrollparams ')'

  280 $@30: /* empty */

  281 action: "isolock" $@30 '(' isolockparams ')'
  282       | "private" '(' privateparams ')'
  283       | "noaction" '(' ')'
  284       | error ')'

  285 $@31: /* empty */

  286 actiondef: "setmods" '.' $@31 setmodsparam ';'

  287 $@32: /* empty */

  288 actiondef: "latchmods" '.' $@32 setmodsparam ';'

  289 $@33: /* empty */

  290 actiondef: "lockmods" '.' $@33 setmodsparam ';'

  291 $@34: /* empty */

  292 actiondef: "setgroup" '.' $@34 setgroupparam ';'

  293 $@35: /* empty */

  294 actiondef: "latchgroup" '.' $@35 setgroupparam ';'

  295 $@36: /* empty */

  296 actiondef: "lockgroup" '.' $@36 setgroupparam ';'

  297 $@37: /* empty */

  298 actiondef: "moveptr" '.' $@37 moveptrparam ';'

  299 $@38: /* empty */

  300 actiondef: "ptrbtn" '.' $@38 ptrbtnparam ';'

  301 $@39: /* empty */

  302 actiondef: "lockptrbtn" '.' $@39 ptrbtnparam ';'

  303 $@40: /* empty */

  304 actiondef: "setptrdflt" '.' $@40 ptrdfltparam ';'

  305 $@41: /* empty */

  306 actiondef: "setcontrols" '.' $@41 ctrlparams ';'

  307 $@42: /* empty */

  308 actiondef: "lockcontrols" '.' $@42 ctrlparams ';'

  309 $@43: /* empty */

  310 actiondef: "isolock" '.' $@43 isolockparam ';'

  311 $@44: /* empty */

  312 actiondef: "switchscreen" '.' $@44 switchscrnparam ';'

  313 symbols: flags "xkb_symbols" '{' symbolssect '}' ';'
  314        | flags "xkb_symbols" STR '{' symbolssect '}' ';'

  315 group: GROUPNUM
  316      | NUM
  317      | HEX

  318 key_list: key_list ',' KEYCODE
  319         | key_list ',' symbolname
  320         | KEYCODE
  321         | symbolname

  322 symbolinclude: '{' symbolssect '}'
  323              | symbolinclude '{' symbolssect '}'

  324 symbolssect: /* empty */
  325            | symbolssect vmods_def
  326            | symbolssect "name" '[' group ']' '=' STR ';'

  327 $@45: /* empty */

  328 symbolssect: symbolssect "key" KEYCODE $@45 '{' keydescs '}' ';'

  329 $@46: /* empty */

  330 symbolssect: symbolssect "replace" "key" KEYCODE $@46 '{' keydescs '}' ';'

  331 $@47: /* empty */

  332 symbolssect: symbolssect "override" "key" KEYCODE $@47 '{' keydescs '}' ';'

  333 $@48: /* empty */

  334 symbolssect: symbolssect "modifier_map" rmod $@48 '{' key_list '}' ';'

  335 $@49: /* empty */

  336 symbolssect: symbolssect include STR $@49 symbolinclude
  337            | symbolssect actiondef

  338 $@50: /* empty */

  339 symbolssect: symbolssect "key" '.' $@50 keydesc ';'
  340            | symbolssect error ';'

  341 symbolname: IDENTIFIER
  342           | NUM

  343 groupsyms: /* empty */
  344          | groupsyms ',' symbolname

  345 $@51: /* empty */

  346 groupsyms: $@51 symbolname

  347 actions: actions ',' action

  348 $@52: /* empty */

  349 actions: $@52 action

  350 keydescs: keydesc
  351         | keydescs ',' keydesc

  352 keydesc: "type" '[' group ']' '=' STR
  353        | "type" '[' error ']'
  354        | "type" '=' STR

  355 $@53: /* empty */

  356 $@54: /* empty */

  357 keydesc: $@53 "symbols" '[' group ']' $@54 '=' '[' groupsyms ']'

  358 $@55: /* empty */

  359 $@56: /* empty */

  360 keydesc: $@55 "actions" '[' group ']' $@56 '=' '[' actions ']'
  361        | "virtualmods" '=' mods
  362        | '[' groupsyms ']'
  363        | '[' actions ']'
  364        | locking
  365        | groupswrap
  366        | groupsclamp
  367        | "groupsredirect" '=' NUM
  368        | "overlay" '=' KEYCODE
  369        | repeat

  370 $@57: /* empty */

  371 geometry: flags "xkb_geometry" '{' $@57 '}' ';'

  372 $@58: /* empty */

  373 geometry: flags "xkb_geometry" STR '{' $@58 '}' ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 95 99 130 134 138 142 146 150 154 158 162
'(' (40) 122 252 254 256 258 260 262 264 266 268 270 272 274 275 277
    279 281 282 283
')' (41) 122 252 254 256 258 260 262 264 266 268 270 272 274 275 277
    279 281 282 283 284
'+' (43) 48 49 80 118 120 122 177 185 208 211 235 240 243
',' (44) 37 167 175 183 197 206 226 233 239 248 318 319 344 347 351
'-' (45) 81 178 186 209 236 241 244
'.' (46) 114 128 286 288 290 292 294 296 298 300 302 304 306 308 310
    312 339
';' (59) 1 2 4 17 18 22 23 25 27 28 29 31 34 35 38 60 61 62 63 69 72
    73 86 87 88 89 90 91 92 93 104 105 106 107 108 116 118 120 122
    123 124 286 288 290 292 294 296 298 300 302 304 306 308 310 312
    313 314 326 328 330 332 334 339 340 371 373
'=' (61) 22 23 25 27 28 29 31 60 61 62 63 86 87 88 89 90 93 97 101
    104 107 108 123 132 136 140 144 148 152 156 160 164 168 169 176
    177 178 184 185 186 198 199 200 207 208 209 210 217 227 228 229
    230 231 234 235 236 240 241 242 243 244 245 249 250 326 352 354
    357 360 361 367 368
'[' (91) 61 62 63 326 352 353 357 360 362 363
']' (93) 61 62 63 326 352 353 357 360 362 363
'{' (123) 1 2 4 17 18 19 20 34 35 64 65 69 72 73 109 110 116 118 120
    122 124 313 314 322 323 328 330 332 334 371 373
'}' (125) 1 2 4 17 18 19 20 34 35 64 65 69 72 73 109 110 116 118 120
    122 124 313 314 322 323 328 330 332 334 371 373
'~' (126) 94 98 129 133 137 141 145 149 153 157 161
error (256) 76 284 340 353
"xkb_keymap" (258) 1 2
"xkb_keycodes" (259) 17 18
"xkb_compatibility" (260) 72 73
"xkb_geometry" (261) 371 373
"xkb_types" (262) 34 35
"xkb_symbols" (263) 313 314
STR (264) 2 18 28 29 33 35 62 69 71 73 124 126 250 314 326 336 352
    354 373
HEX (265) 249 317
FLAGS (266) 16
KEYCODE (267) 25 27 31 318 320 328 330 332 368
NUM (268) 22 23 25 27 28 29 58 93 123 176 177 178 184 185 186 188 199
    234 235 236 242 243 244 245 316 342 367
"minimum" (269) 22
"maximum" (270) 23
"virtual" (271) 29
"indicator" (272) 28 29 124 128
"alias" (273) 31
IDENTIFIER (274) 36 37 39 74 184 185 186 341
"virtualmods" (275) 38 361
"type" (276) 69 249 352 353 354
"data" (277) 250
"map" (278) 61
"level_name" (279) 62
"preserve" (280) 63
LEVEL (281) 56
"usemodmap" (282) 104 137 138 139 140 169 228
"repeat" (283) 145 146 147 148
"locking" (284) 141 142 143 144
"virtualmod" (285) 107
BOOLEAN (286) 97 101 132 136 140 144 148 152 156 160 164
"interpret" (287) 114 116 118 120 122
INTERPMATCH (288) 122
"clearlocks" (289) 129 130 131 132
"mods" (290) 60 86 168 169 218 227 228
"setmods" (291) 252 286
"latchmods" (292) 254 288
"lockmods" (293) 256 290
"action" (294) 108
"latchtolock" (295) 133 134 135 136
"group" (296) 123 176 177 178 229
"groups" (297) 87 219
"setgroup" (298) 258 292
"latchgroup" (299) 260 294
"lockgroup" (300) 262 296
"accel" (301) 157 158 159 160
"moveptr" (302) 264 298
"private" (303) 282
"button" (304) 198 202 207 208 209
BUTTONNUM (305) 189
"default" (306) 190
"count" (307) 199
"ptrbtn" (308) 266 300
"defaultbutton" (309) 201
"all" (310) 54 83 203 215 222
"none" (311) 55 78 216 223
"any" (312) 57 75 79 120
CONTROLFLAG (313) 211 212
"affect" (314) 200 210 231
"setptrdflt" (315) 270 304
"lockptrbtn" (316) 268 302
"setcontrols" (317) 272 306
"lockcontrols" (318) 274 308
"controls" (319) 88 217 220 230
"terminate" (320) 275
"whichmodstate" (321) 89
"whichgroupstate" (322) 90
"whichstate" (323) 77
"index" (324) 93
"allowexplicit" (325) 94 95 96 97
"driveskbd" (326) 98 99 100 101
"symbols" (327) 357
"name" (328) 326
GROUPNUM (329) 315
"actions" (330) 360
"key" (331) 328 330 332 339
"modifier_map" (332) 334
"shift" (333) 40
"lock" (334) 41 191
"control" (335) 42
"mod1" (336) 43
"mod2" (337) 44
"mod3" (338) 45
"mod4" (339) 46
"mod5" (340) 47
"unlock" (341) 192
"both" (342) 193
"neither" (343) 194
"include" (344) 11
"augment" (345) 12
"override" (346) 14 332
"replace" (347) 13 27 330
"isolock" (348) 281 310
"pointers" (349) 221
"noaction" (350) 283
"groupswrap" (351) 149 150 151 152
"groupsclamp" (352) 153 154 155 156
"groupsredirect" (353) 367
"overlay" (354) 213 368
"switchscreen" (355) 277 312
"sameserver" (356) 161 162 163 164
"screen" (357) 234 235 236 240 241
"line" (358) 242 243 244
"percent" (359) 245
"consscroll" (360) 279
"float" (361) 240 241


Nonterminals, with rules where they appear

$accept (121)
    on left: 0
xkbkeymap (122)
    on left: 1 2 4, on right: 0
$@1 (123)
    on left: 3, on right: 4
keymap (124)
    on left: 5 6 7 8 9 10, on right: 1 2 4 6 7 8 9 10
include (125)
    on left: 11 12 13 14, on right: 33 71 126 336
flags (126)
    on left: 15 16, on right: 16 17 18 34 35 72 73 313 314 371 373
keycodes (127)
    on left: 17 18, on right: 7
keycodesinclude (128)
    on left: 19 20, on right: 20 33
keycodesect (129)
    on left: 21 22 23 25 27 28 29 31 33, on right: 17 18 19 20 22 23
    25 27 28 29 31 33
$@2 (130)
    on left: 24, on right: 25
$@3 (131)
    on left: 26, on right: 27
$@4 (132)
    on left: 30, on right: 31
$@5 (133)
    on left: 32, on right: 33
types (134)
    on left: 34 35, on right: 6
vmodslist (135)
    on left: 36 37, on right: 37 38
vmods_def (136)
    on left: 38, on right: 67 112 325
vmod (137)
    on left: 39, on right: 49 53 107
rmod (138)
    on left: 40 41 42 43 44 45 46 47, on right: 48 51 118 334
mods (139)
    on left: 48 49 51 53 54 55, on right: 48 49 60 61 63 86 122 123
    168 227 361
@6 (140)
    on left: 50, on right: 51
@7 (141)
    on left: 52, on right: 53
level (142)
    on left: 56 57 58, on right: 61 62 104
type (143)
    on left: 59 60 61 62 63, on right: 60 61 62 63 69
typesinclude (144)
    on left: 64 65, on right: 65 71
typessect (145)
    on left: 66 67 69 71, on right: 34 35 64 65 67 69 71
$@8 (146)
    on left: 68, on right: 69
$@9 (147)
    on left: 70, on right: 71
compat (148)
    on left: 72 73, on right: 8
symbol (149)
    on left: 74 75 76, on right: 116 118 120 122
whichstate (150)
    on left: 77 78 79, on right: 89 90
groups (151)
    on left: 80 81 82 83, on right: 80 81 87
indicators (152)
    on left: 84 85, on right: 85 124
indicator (153)
    on left: 86 87 88 89 90 91 92 93, on right: 85 128
allowexplicit (154)
    on left: 94 95 96 97, on right: 91
driveskbd (155)
    on left: 98 99 100 101, on right: 92
interprets (156)
    on left: 102 103, on right: 103 116 118 120 122
interpret (157)
    on left: 104 105 106 107 108, on right: 103 114
compatinclude (158)
    on left: 109 110, on right: 110 126
compatsect (159)
    on left: 111 112 114 116 118 120 122 123 124 126 127 128, on right:
    72 73 109 110 112 114 116 118 120 122 123 124 126 127 128
$@10 (160)
    on left: 113, on right: 114
$@11 (161)
    on left: 115, on right: 116
$@12 (162)
    on left: 117, on right: 118
$@13 (163)
    on left: 119, on right: 120
$@14 (164)
    on left: 121, on right: 122
$@15 (165)
    on left: 125, on right: 126
clearlocks (166)
    on left: 129 130 131 132, on right: 170 179
latchtolock (167)
    on left: 133 134 135 136, on right: 172 180
usemodmap (168)
    on left: 137 138 139 140, on right: 171
locking (169)
    on left: 141 142 143 144, on right: 106 364
repeat (170)
    on left: 145 146 147 148, on right: 105 369
groupswrap (171)
    on left: 149 150 151 152, on right: 365
groupsclamp (172)
    on left: 153 154 155 156, on right: 366
noaccel (173)
    on left: 157 158 159 160, on right: 187
sameserver (174)
    on left: 161 162 163 164, on right: 237
setmodsparams (175)
    on left: 165 166 167, on right: 167 252 254 256
setmodsparam (176)
    on left: 168 169 170 171 172, on right: 166 167 286 288 290
setgroupparams (177)
    on left: 173 174 175, on right: 175 258 260 262
setgroupparam (178)
    on left: 176 177 178 179 180, on right: 174 175 292 294 296
moveptrparams (179)
    on left: 181 182 183, on right: 183 264
moveptrparam (180)
    on left: 184 185 186 187, on right: 182 183 298
button (181)
    on left: 188 189 190, on right: 198 207 208 209
affectbtnlock (182)
    on left: 191 192 193 194, on right: 200
ptrbtnparams (183)
    on left: 195 196 197, on right: 197 266 268
ptrbtnparam (184)
    on left: 198 199 200, on right: 196 197 300 302
affectbtns (185)
    on left: 201 202 203, on right: 210
ptrdfltparams (186)
    on left: 204 205 206, on right: 206 270
ptrdfltparam (187)
    on left: 207 208 209 210, on right: 205 206 304
ctrls (188)
    on left: 211 212 213, on right: 88 211 214
ctrlflags (189)
    on left: 214 215 216, on right: 217 230
ctrlparams (190)
    on left: 217, on right: 272 274 306 308
isoaffect (191)
    on left: 218 219 220 221 222 223, on right: 231
isolockparams (192)
    on left: 224 225 226, on right: 226 281
isolockparam (193)
    on left: 227 228 229 230 231, on right: 225 226 310
switchscrnparams (194)
    on left: 232 233, on right: 233 277
switchscrnparam (195)
    on left: 234 235 236 237, on right: 232 233 312
consscrollparams (196)
    on left: 238 239, on right: 239 279
consscrollparam (197)
    on left: 240 241 242 243 244 245, on right: 238 239
privateparams (198)
    on left: 246 247 248, on right: 248 282
privateparam (199)
    on left: 249 250, on right: 247 248
action (200)
    on left: 252 254 256 258 260 262 264 266 268 270 272 274 275 277
    279 281 282 283 284, on right: 108 347 349
$@16 (201)
    on left: 251, on right: 252
$@17 (202)
    on left: 253, on right: 254
$@18 (203)
    on left: 255, on right: 256
$@19 (204)
    on left: 257, on right: 258
$@20 (205)
    on left: 259, on right: 260
$@21 (206)
    on left: 261, on right: 262
$@22 (207)
    on left: 263, on right: 264
$@23 (208)
    on left: 265, on right: 266
$@24 (209)
    on left: 267, on right: 268
$@25 (210)
    on left: 269, on right: 270
$@26 (211)
    on left: 271, on right: 272
$@27 (212)
    on left: 273, on right: 274
$@28 (213)
    on left: 276, on right: 277
$@29 (214)
    on left: 278, on right: 279
$@30 (215)
    on left: 280, on right: 281
actiondef (216)
    on left: 286 288 290 292 294 296 298 300 302 304 306 308 310 312,
    on right: 127 337
$@31 (217)
    on left: 285, on right: 286
$@32 (218)
    on left: 287, on right: 288
$@33 (219)
    on left: 289, on right: 290
$@34 (220)
    on left: 291, on right: 292
$@35 (221)
    on left: 293, on right: 294
$@36 (222)
    on left: 295, on right: 296
$@37 (223)
    on left: 297, on right: 298
$@38 (224)
    on left: 299, on right: 300
$@39 (225)
    on left: 301, on right: 302
$@40 (226)
    on left: 303, on right: 304
$@41 (227)
    on left: 305, on right: 306
$@42 (228)
    on left: 307, on right: 308
$@43 (229)
    on left: 309, on right: 310
$@44 (230)
    on left: 311, on right: 312
symbols (231)
    on left: 313 314, on right: 9
group (232)
    on left: 315 316 317, on right: 80 81 82 229 326 352 357 360
key_list (233)
    on left: 318 319 320 321, on right: 318 319 334
symbolinclude (234)
    on left: 322 323, on right: 323 336
symbolssect (235)
    on left: 324 325 326 328 330 332 334 336 337 339 340, on right:
    313 314 322 323 325 326 328 330 332 334 336 337 339 340
$@45 (236)
    on left: 327, on right: 328
$@46 (237)
    on left: 329, on right: 330
$@47 (238)
    on left: 331, on right: 332
$@48 (239)
    on left: 333, on right: 334
$@49 (240)
    on left: 335, on right: 336
$@50 (241)
    on left: 338, on right: 339
symbolname (242)
    on left: 341 342, on right: 319 321 344 346
groupsyms (243)
    on left: 343 344 346, on right: 344 357 362
$@51 (244)
    on left: 345, on right: 346
actions (245)
    on left: 347 349, on right: 347 360 363
$@52 (246)
    on left: 348, on right: 349
keydescs (247)
    on left: 350 351, on right: 328 330 332 351
keydesc (248)
    on left: 352 353 354 357 360 361 362 363 364 365 366 367 368 369,
    on right: 339 350 351
$@53 (249)
    on left: 355, on right: 357
$@54 (250)
    on left: 356, on right: 357
$@55 (251)
    on left: 358, on right: 360
$@56 (252)
    on left: 359, on right: 360
geometry (253)
    on left: 371 373, on right: 10
$@57 (254)
    on left: 370, on right: 371
$@58 (255)
    on left: 372, on right: 373


state 0

    0 $accept: . xkbkeymap $end

    "xkb_keymap"  shift, and go to state 1
    '{'           shift, and go to state 2

    xkbkeymap  go to state 3


state 1

    1 xkbkeymap: "xkb_keymap" . '{' keymap '}' ';'
    2          | "xkb_keymap" . STR '{' keymap '}' ';'

    STR  shift, and go to state 4
    '{'  shift, and go to state 5


state 2

    4 xkbkeymap: '{' . keymap '}' $@1 ';'

    $default  reduce using rule 5 (keymap)

    keymap  go to state 6


state 3

    0 $accept: xkbkeymap . $end

    $end  shift, and go to state 7


state 4

    2 xkbkeymap: "xkb_keymap" STR . '{' keymap '}' ';'

    '{'  shift, and go to state 8


state 5

    1 xkbkeymap: "xkb_keymap" '{' . keymap '}' ';'

    $default  reduce using rule 5 (keymap)

    keymap  go to state 9


state 6

    4 xkbkeymap: '{' keymap . '}' $@1 ';'
    6 keymap: keymap . types
    7       | keymap . keycodes
    8       | keymap . compat
    9       | keymap . symbols
   10       | keymap . geometry

    '}'  shift, and go to state 10

    $default  reduce using rule 15 (flags)

    flags     go to state 11
    keycodes  go to state 12
    types     go to state 13
    compat    go to state 14
    symbols   go to state 15
    geometry  go to state 16


state 7

    0 $accept: xkbkeymap $end .

    $default  accept


state 8

    2 xkbkeymap: "xkb_keymap" STR '{' . keymap '}' ';'

    $default  reduce using rule 5 (keymap)

    keymap  go to state 17


state 9

    1 xkbkeymap: "xkb_keymap" '{' keymap . '}' ';'
    6 keymap: keymap . types
    7       | keymap . keycodes
    8       | keymap . compat
    9       | keymap . symbols
   10       | keymap . geometry

    '}'  shift, and go to state 18

    $default  reduce using rule 15 (flags)

    flags     go to state 11
    keycodes  go to state 12
    types     go to state 13
    compat    go to state 14
    symbols   go to state 15
    geometry  go to state 16


state 10

    4 xkbkeymap: '{' keymap '}' . $@1 ';'

    $default  reduce using rule 3 ($@1)

    $@1  go to state 19


state 11

   16 flags: flags . FLAGS
   17 keycodes: flags . "xkb_keycodes" '{' keycodesect '}' ';'
   18         | flags . "xkb_keycodes" STR '{' keycodesect '}' ';'
   34 types: flags . "xkb_types" '{' typessect '}' ';'
   35      | flags . "xkb_types" STR '{' typessect '}' ';'
   72 compat: flags . "xkb_compatibility" '{' compatsect '}' ';'
   73       | flags . "xkb_compatibility" STR '{' compatsect '}' ';'
  313 symbols: flags . "xkb_symbols" '{' symbolssect '}' ';'
  314        | flags . "xkb_symbols" STR '{' symbolssect '}' ';'
  371 geometry: flags . "xkb_geometry" '{' $@57 '}' ';'
  373         | flags . "xkb_geometry" STR '{' $@58 '}' ';'

    "xkb_keycodes"       shift, and go to state 20
    "xkb_compatibility"  shift, and go to state 21
    "xkb_geometry"       shift, and go to state 22
    "xkb_types"          shift, and go to state 23
    "xkb_symbols"        shift, and go to state 24
    FLAGS                shift, and go to state 25


state 12

    7 keymap: keymap keycodes .

    $default  reduce using rule 7 (keymap)


state 13

    6 keymap: keymap types .

    $default  reduce using rule 6 (keymap)


state 14

    8 keymap: keymap compat .

    $default  reduce using rule 8 (keymap)


state 15

    9 keymap: keymap symbols .

    $default  reduce using rule 9 (keymap)


state 16

   10 keymap: keymap geometry .

    $default  reduce using rule 10 (keymap)


state 17

    2 xkbkeymap: "xkb_keymap" STR '{' keymap . '}' ';'
    6 keymap: keymap . types
    7       | keymap . keycodes
    8       | keymap . compat
    9       | keymap . symbols
   10       | keymap . geometry

    '}'  shift, and go to state 26

    $default  reduce using rule 15 (flags)

    flags     go to state 11
    keycodes  go to state 12
    types     go to state 13
    compat    go to state 14
    symbols   go to state 15
    geometry  go to state 16


state 18

    1 xkbkeymap: "xkb_keymap" '{' keymap '}' . ';'

    ';'  shift, and go to state 27


state 19

    4 xkbkeymap: '{' keymap '}' $@1 . ';'

    ';'  shift, and go to state 28


state 20

   17 keycodes: flags "xkb_keycodes" . '{' keycodesect '}' ';'
   18         | flags "xkb_keycodes" . STR '{' keycodesect '}' ';'
